--- a/DataStorage/app/src/main/res/layout/activity_internal_storage.xml
+++ b/DataStorage/app/src/main/res/layout/activity_internal_storage.xml
@@ -5,7 +5,7 @@
 
         <variable
             name="viewModel"
-            type="com.cook.datastorage.internalStorage.InternalStorageActivity.InternalStorageViewModel" />
+            type="com.cook.datastorage.fileStorage.internalStorage.InternalStorageActivity.InternalStorageViewModel" />
     </data>
 
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
