--- a/Animations/app/src/main/res/layout/activity_main.xml
+++ b/Animations/app/src/main/res/layout/activity_main.xml
@@ -1,36 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <Button
-        android:id="@+id/bt_alpha"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Alpha" />
+    <data>
+        <variable
+            name="viewModel"
+            type="com.cook.animations.ActivityMain.MainActivityModelView"/>
+    </data>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-    <Button
-        android:id="@+id/bt_translation_X"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="translation X" />
 
-    <Button
-        android:id="@+id/bt_rotate"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="rotate" />
-
-    <Button
-        android:id="@+id/bt_scale"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="scale" />
-
-    <Button
-        android:id="@+id/bt_set"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="set" />
-</LinearLayout>
+        <Button
+            android:id="@+id/bt_property_animations"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:onClick="@{viewModel.onProperyAnimationClick}"
+            android:text="property animations" />
+    </RelativeLayout>
+</layout>
