--- a/Animations/app/src/main/res/layout/activity_main.xml
+++ b/Animations/app/src/main/res/layout/activity_main.xml
@@ -71,10 +71,18 @@
             android:text="Image Viewer"
             android:onClick="@{viewModel.onImageViewer}"
             android:layout_width="wrap_content"
+            android:id="@+id/bt_image_view"
             android:layout_height="wrap_content"
             android:layout_below="@id/bt_cross_fade"
             android:layout_centerHorizontal="true" />
 
+        <Button
+            android:text="Anticipate Overshoot"
+            android:onClick="@{viewModel.onOvershootClick}"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/bt_image_view"
+            android:layout_centerHorizontal="true" />
 
     </RelativeLayout>
 </layout>
