--- a/Animations/app/src/main/res/layout/activity_anticipation_overshoot1.xml
+++ b/Animations/app/src/main/res/layout/activity_anticipation_overshoot1.xml
@@ -4,7 +4,7 @@
     <data>
         <variable
             name="viewModel"
-            type="com.cook.animations.anticipationOvershoot.ActivityAnticipationOvershoot.AnticipationOvershootViewModel"/>
+            type="com.cook.animations.anticipationOvershoot1.ActivityAnticipationOvershoot1.AnticipationOvershootViewModel"/>
     </data>
     <RelativeLayout
         android:layout_width="match_parent"
