--- a/Animations/app/src/main/res/layout/activity_anticipation_overshoot2.xml
+++ b/Animations/app/src/main/res/layout/activity_anticipation_overshoot2.xml
@@ -14,6 +14,10 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
+        <com.cook.animations.anticipationOvershoot2.CustomButton
+            android:text="ololo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
     </RelativeLayout>
 
 </layout>
